Each message should have a base dictionary to include forwarded to

--- a/Dualog.eCatch.Shared.Language/Translations.nb-NO.resx
+++ b/Dualog.eCatch.Shared.Language/Translations.nb-NO.resx
@@ -396,4 +396,7 @@
 	<data name="DailyCatch" xml:space="preserve">
 		<value>Daglig fangst</value>
 	</data>
+	<data name="ForwardedTo" xml:space="preserve">
+		<value>Videresendt til</value>
+	</data>
 </root>
