Adds heading and speed to MAN

--- a/Dualog.eCatch.Shared/Language/Translations.nb-NO.resx
+++ b/Dualog.eCatch.Shared/Language/Translations.nb-NO.resx
@@ -456,4 +456,10 @@
 	<data name="EndTime" xml:space="preserve">
 		<value>Stopptid</value>
 	</data>
+	<data name="Speed" xml:space="preserve">
+		<value>Hastighet</value>
+	</data>
+	<data name="Heading" xml:space="preserve">
+		<value>Retning</value>
+	</data>
 </root>
